test/files/neg/t1364.check
t1364.scala:9: error: overriding type T <: AnyRef{type S[-U]} (defined in trait A);
 type T = AnyRef{type S[U] = U} has incompatible type
 type T = { type S[U] = U }
      ^
one error found
